--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,5 +4,44 @@ project(Slag)
 set(CMAKE_CXX_STANDARD 20)
 
 find_package(Boost REQUIRED)
-add_library(Slag src/UniformSet.h src/UniformBuffer.h src/Resource.h src/Resource.cpp src/Frame.h src/Frame.h src/Frame.cpp src/Swapchain.h src/Swapchain.cpp src/BackEnd/ResourceManager.cpp src/BackEnd/ResourceManager.h src/Uniform.h src/SlagLib.cpp src/SlagLib.h src/CommandBuffer.h src/Texture.h src/PixelFormat.h)
+SET(VULKAN_SOURCES)
+SET(DX12_SOURCES test/Main.cpp)
+
+OPTION(SLAG_VULKAN_BACKEND "Include Vulkan backend" ON)
+OPTION(SLAG_DX12_BACKEND "Include DX12 backend" ON)
+if(!WIN32)
+    set(SLAG_DX12_BACKEND OFF)
+endif()
+
+if(SLAG_VULKAN_BACKEND)
+    find_package(Vulkan REQUIRED)
+    add_definitions(-DSLAG_VULKAN_BACKEND=1)
+    message("adding vulkan backend")
+    file(GLOB_RECURSE VULKAN_SOURCES CONFIGURE_DEPENDS "src/slag/BackEnd/Vulkan/*.h" "src/slag/BackEnd/Vulkan/*.cpp")
+endif()
+
+if(SLAG_DX12_BACKEND)
+    file(GLOB_RECURSE DX12_SOURCES CONFIGURE_DEPENDS "src/slag/BackEnd/DX12/*.h" "src/slag/BackEnd/DX12/*.cpp")
+endif()
+
+OPTION(BUILD_VULKAN_TEST_EXECUTABLE "Build test executable" ON)
+
+
+add_library(Slag ${VULKAN_SOURCES} ${DX12_SOURCES} src/slag/UniformSet.h src/slag/UniformBuffer.h src/slag/Resource.h src/slag/Resource.cpp src/slag/Frame.h src/slag/Frame.h src/slag/Frame.cpp src/slag/Swapchain.h src/slag/Swapchain.cpp src/slag/BackEnd/ResourceManager.cpp src/slag/BackEnd/ResourceManager.h src/slag/Uniform.h src/slag/SlagLib.cpp src/slag/SlagLib.h src/slag/CommandBuffer.h src/slag/Texture.h src/slag/PixelFormat.h src/slag/GraphicsCard.h src/slag/PlatformData.h)
 target_include_directories(Slag PRIVATE ${Boost_INCLUDE_DIRS})
+
+
+if(SLAG_VULKAN_BACKEND)
+    add_subdirectory(third-party/vma)
+    add_subdirectory(third-party/vk-bootstrap)
+    target_include_directories(Slag PRIVATE ${Vulkan_INCLUDE_DIR})
+    target_link_libraries(Slag ${Vulkan_LIBRARIES} vk-bootstrap VulkanMemoryAllocator)
+endif()
+
+if(BUILD_VULKAN_TEST_EXECUTABLE)
+    message("building test executable")
+    find_package(SDL2 CONFIG REQUIRED)
+    add_executable(SlagTest test/Main.cpp)
+    target_include_directories(SlagTest PRIVATE src ${SDL2_LIBRARIES})
+    target_link_libraries(SlagTest Slag SDL2::SDL2)
+endif()
