--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,6 +77,7 @@ add_library(Slag ${VULKAN_SOURCES} ${DX12_SOURCES}
         src/slag/FrameResourceDescriptions.h
         src/slag/ComputeShader.cpp
         src/slag/ComputeShader.h
+        src/slag/Utils/RawPixelStream.h
 )
 target_include_directories(Slag PRIVATE ${Boost_INCLUDE_DIRS} third-party/stb)
 
