--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "third-party/dx12-headers"]
 	path = third-party/dx12-headers
 	url = https://github.com/microsoft/DirectX-Headers
+[submodule "third-party/d3dma"]
+	path = third-party/d3dma
+	url = https://github.com/GPUOpen-LibrariesAndSDKs/D3D12MemoryAllocator
