Made ResourceConsumer it's own interface, taking it off command buffers and allowing it to ber implemented on whatever requires it, and allow for command buffers (secondary) to not hold resource references

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -99,6 +99,8 @@ add_library(Slag ${VULKAN_SOURCES} ${DX12_SOURCES}
         src/slag/Buffer.cpp
         src/slag/Buffer.h
         src/slag/Rectangle.h
+        src/slag/Resources/ResourceConsumer.h
+        src/slag/Resources/ResourceConsumer.cpp
 )
 target_include_directories(Slag PRIVATE ${Boost_INCLUDE_DIRS} third-party/stb)
 
