Test all valid image barrier transitions passing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -221,6 +221,8 @@ if(BUILD_SLAG_TESTS)
             test/tests/IntegrationTests.cpp
             test/utils/Window.cpp
             test/utils/Window.h
+            test/utils/BarrierUtils.cpp
+            test/utils/BarrierUtils.h
     )
     target_link_libraries(SlagTests GTest::gtest SDL2::SDL2 glm::glm Slag)
     target_include_directories(SlagTests PRIVATE src ${SDL2_LIBRARIES} third-party/stb test/third-party/LodePNG)
